"tolist approach"